--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <audio id="audio" src="/music/290421__littlerobotsoundfactory__mouth_04.wav"></audio>
     <div>
         <div class="scores">
             <h1 id="score">000</h1>
